force-app/main/default/objects/copado__Data_Set__c/fields/copado__Data_Template__c.field-meta.xml
<CustomField>
    <fullName>copado__Data_Template__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Related Data Template record that defines related objects and their relationships for the attachments of this Data Set.</description>
    <inlineHelpText>The selected Data Template will be used as a base for object relationships, related fields and filtering.</inlineHelpText>
    <label>Data Template</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>copado__Data_Template__c.copado__Active__c</field>
            <operation>equals</operation>
            <value>True</value>
        </filterItems>
        <isOptional>true</isOptional>
    </lookupFilter>
    <referenceTo>copado__Data_Template__c</referenceTo>
    <relationshipLabel>Data Sets</relationshipLabel>
    <relationshipName>Data_Sets</relationshipName>
    <type>Lookup</type>
</CustomField>