force-app/main/default/objects/copado__Data_Set__c/fields/copado__Execution_Job__c.field-meta.xml
<CustomField>
    <fullName>copado__Execution_Job__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Execution Job</label>
    <referenceTo>copado__Deployment__c</referenceTo>
    <relationshipLabel>Data Sets</relationshipLabel>
    <relationshipName>Data_Sets</relationshipName>
    <type>Lookup</type>
</CustomField>