force-app/main/default/objects/copado__Data_Set__c/fields/copado__Execution_Status__c.field-meta.xml
<CustomField>
    <fullName>copado__Execution_Status__c</fullName>
    <formula>TEXT(copado__Execution_Job__r.copado__Status__c)</formula>
    <label>File Execution Status</label>
    <type>Text</type>
</CustomField>