force-app/main/default/objects/copado__Data_Set__c/fields/copado__MCDD_Enabled__c.field-meta.xml
<CustomField>
    <fullName>copado__MCDD_Enabled__c</fullName>
    <defaultValue>false</defaultValue>
    <label>MCDD Enabled</label>
    <type>Checkbox</type>
</CustomField>