force-app/main/default/objects/copado__Data_Set__c/listViews/copado__All.listView-meta.xml
<ListView>
    <fullName>copado__All</fullName>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>